Eclipse fájlok törlése.