@@ -5,28 +5,66 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>test</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+			<release>11</release>
         </configuration>
       </plugin>
+      
+    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.22.0</version>
+		<configuration>
+			<argLine>
+				--illegal-access=permit
+			</argLine>
+		</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-failsafe-plugin</artifactId>
+		<version>2.22.0</version>
+		<configuration>
+			<argLine>
+				--illegal-access=permit
+			</argLine>
+		</configuration>
+	</plugin>
+	  
+      <plugin>
+    	<groupId>org.pitest</groupId>
+    	<artifactId>pitest-maven</artifactId>
+    	<version>1.6.6</version>
+    	 <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>0.11</version>
+                    </dependency>
+                </dependencies>
+ 	</plugin>
+      	
     </plugins>
   </build>
+
   <dependencies>
   	<dependency>
-    	<groupId>org.junit.jupiter</groupId>
-    	<artifactId>junit-jupiter-api</artifactId>
-    	<version>5.0.0-M5</version>
-    	<scope>test</scope>
-	</dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter</artifactId>
+    <version>5.7.1</version>
+    <scope>test</scope>
+</dependency>
+
   	<dependency>
   		<groupId>org.ejml</groupId>
   		<artifactId>ejml-all</artifactId>
   		<version>0.40</version>
 	</dependency>
+	
   </dependencies>
 </project>
